checkpoint: before [fase 0]